# glove80-rmk

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  PROTOCOL_NEEDS.md  README.md  ROADMAP.md  STATE-2026-07-19.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: build.yml
config/: default.nix  glove80.conf  glove80.keymap
crates/glove80-compositor/: Cargo.toml  rust-toolchain.toml
crates/glove80-compositor/src/: lib.rs  sync.rs
crates/glove80-control/: Cargo.toml  README.md  build.rs
crates/glove80-control/examples/: glove80.toml
crates/glove80-control/scripts/: phase6-hw-test.sh
crates/glove80-control/src/: config.rs  keycodes.rs  keymap.rs  keymapcfg.rs  lighting.rs  main.rs  runtime_manifest.rs  rynk_client.rs  rynk_keycode.rs  version.rs
crates/glove80-control/src/transport/: ids.rs  mod.rs  usb.rs
crates/glove80-host-protocol/: Cargo.toml  PROTOCOL.md  rust-toolchain.toml
crates/glove80-host-protocol/src/: config.rs  error.rs  frame.rs  io.rs  lib.rs  message.rs
crates/glove80-host-protocol/tests/: golden.rs  golden_v11.rs  golden_v12.rs  golden_v13.rs  golden_v14.rs
crates/glove80-host-protocol/tests/common/: mod.rs
crates/glove80-host-protocol/vectors/: host-protocol-v1.1.json  host-protocol-v1.2.json  host-protocol-v1.3.json  host-protocol-v1.4.json  host-protocol-v1.json
crates/glove80-rmk/: Cargo.toml  README.md  build.rs  build.sh  keyboard.toml  memory.x  rust-toolchain.toml
crates/glove80-rmk/src/: central.rs  central_lighting.rs  lighting.rs  peripheral.rs  remote_boot.rs  split_lighting.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: design-goals.md  glove80-rmk-repository-design.md  host-lighting-protocol.md  implementation-plan.md  lighting-design.md  migration.md  qualification.md  rynk-migration.md  upstream-alignment.md
docs/upstream/: BRANCH-STACK.md  PATCHES.md  RENAME-MAP.md  RMK-UPSTREAMING-PROPOSAL.md  SUMMARY.md
firmware/glove80-rmk/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  keyboard.toml  memory.x  vial.json
firmware/glove80-rmk/.cargo/: config.toml
firmware/glove80-rmk/src/: central.rs  central_lighting.rs  config_store.rs  host_proto.rs  host_pump.rs  lighting.rs  lighting_config.rs  peripheral.rs  remote_boot.rs  split_lighting.rs  version.rs
host-lighting/: CMakeLists.txt  Kconfig
host-lighting/dts/bindings/behaviors/: zmk,behavior-host-lighting.yaml
host-lighting/include/zmk/: host_lighting.h
host-lighting/src/: behavior_host_lighting.c  host_lighting_subsystem.c
maintenance/: CMakeLists.txt  Kconfig
maintenance/src/: maintenance_subsystem.c
nix/: moergo-zmk-host-lighting.patch  moergo-zmk-power-led.patch  moergo-zmk-status-pixel.patch  moergo-zmk-studio-modules.patch
protocol/glove80-host-protocol/: PROTOCOL.md
protocol/proto/zmk/: host_lighting.options.in  host_lighting.proto  maintenance.proto  studio.proto
rmk/glove80/: Cargo.toml  README.md  build.rs  keyboard.toml
rmk/glove80-compositor/: Cargo.toml  rust-toolchain.toml
rmk/glove80-compositor/src/: lib.rs  sync.rs
rmk/glove80/src/: central.rs  host_proto.rs  host_pump.rs  lighting.rs  peripheral.rs  split_lighting.rs  version.rs
scripts/: build-release.sh  check-rynk-wasm-provenance.mjs  check.sh  generate-keymap.mjs  glove80-control.py  glove80-lighting.py  package-release.mjs
tools/glove80-control/: Cargo.toml  README.md  build.rs
tools/glove80-control/examples/: glove80.toml  lighting-default.toml
tools/glove80-control/src/: hostproto.rs  keycodes.rs  keymap.rs  keymapcfg.rs  lightcfg.rs  lighting.rs  main.rs  rynk_client.rs  rynk_hid.rs  version.rs
tools/glove80-control/src/transport/: ble.rs  mod.rs  usb.rs
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.tsx  styles.css
ui/src/components/: Board.tsx  KeymapPanel.tsx  OverlayPanel.tsx
ui/src/lib/: compositor-preview.test.ts  compositor-preview.ts  glove80-layout.test.ts  glove80-layout.ts  host-protocol.test.ts  host-protocol.ts  keycodes.test.ts  keycodes.ts  lighting-client.ts  mock-device.test.ts  mock-device.ts  protobuf.test.ts  protobuf.ts  protocol-client.test.ts  protocol-client.ts  rynk-web-client.ts  transports.ts
zmk/app/: CMakeLists.txt
zmk/app/boards/arm/glove80/: glove80.dtsi
zmk/app/include/zmk/runtime_config/: partition.h
zmk/app/include/zmk/split/: central.h
zmk/app/include/zmk/split/bluetooth/: uuid.h
zmk/app/include/zmk/split/transport/: types.h
zmk/app/src/settings/: reset_settings_on_start.c
zmk/app/src/split/: central.c  peripheral.c
zmk/app/src/split/bluetooth/: central.c  service.c
zmk/app/src/split/wired/: central.c
