[workspace]
members = ["tools/glove80-control"]
default-members = ["tools/glove80-control"]
# glove80-host-protocol is a path dependency with its own [workspace];
# exclude it so Cargo keeps it a separate workspace root.
exclude = [
  "crates/glove80-host-protocol",
  "dependencies/rmk/rmk",
  "dependencies/rmk/rmk-config",
  "dependencies/rmk/rmk-macro",
  "dependencies/rmk/rmk-types",
  "dependencies/rmk/rynk",
  "dependencies/rmk/rynk/rynk-ble",
  "dependencies/rmk/rynk/rynk-kle",
  "dependencies/rmk/rynk/rynk-serial",
  "dependencies/rmk/rynk/rynk-wasm",
]
resolver = "2"
