[workspace]
members = ["crates/glove80-control", "crates/xtask"]
default-members = ["crates/glove80-control"]
# The embedded firmware is a standalone workspace because it cross-compiles.
exclude = [
  # Agent/task worktrees checked out under the repo root stay separate roots.
  ".worktrees",
  "crates/glove80-rmk",
  "dependencies/rmk/rmk",
  "dependencies/rmk/rmk-config",
  "dependencies/rmk/rmk-macro",
  "dependencies/rmk/rmk-types",
  "dependencies/rmk/rynk",
  "dependencies/rmk/rynk/rynk-ble",
  "dependencies/rmk/rynk/rynk-kle",
  "dependencies/rmk/rynk/rynk-serial",
  "dependencies/rmk/rynk/rynk-wasm",
]
resolver = "2"
