[package]
name = "glove80-control"
version = "0.1.0"
edition = "2021"
description = "Control Glove80 keymaps, lighting, versions, and bootloaders over Rynk"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
# USB transport: direct hidraw ioctls (no libudev/hidapi C dependency).
libc = "0.2"
# RMK-native configuration protocol for USB, serial, and BLE operations.
rynk = { path = "../../dependencies/rmk/rynk" }
rynk-serial = { path = "../../dependencies/rmk/rynk/rynk-serial" }
rynk-ble = { path = "../../dependencies/rmk/rynk/rynk-ble" }
embassy-futures = "0.1"
tokio = { version = "1.47", features = ["net", "rt-multi-thread"] }
