[package]
name = "glove80-host-protocol"
version = "0.1.0"
edition = "2021"
description = "Transport-independent wire codec for the Glove80 host protocol (v1)"
license = "MIT"

[features]
default = []
# Adds std::error::Error impls. The crate is no_std (core + heapless) otherwise.
std = []

[dependencies]
heapless = { version = "0.8", default-features = false }

[dev-dependencies]
serde_json = "1"

# Standalone workspace: the repo root workspace only contains
# tools/glove80-control and should stay that way.
[workspace]
