[package]
name = "glove80-compositor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Sparse lighting compositor for the Glove80 RMK firmware (pure logic, host-testable)"

# Standalone workspace, like rmk/glove80: the repo root workspace targets the
# host; rmk/glove80 cross-compiles. This crate is no_std pure logic with zero
# dependencies so `cargo test` runs natively on the host while the firmware
# consumes it by path for thumbv7em-none-eabihf.
[workspace]

[dependencies]
