[package]
name = "glove80-rmk"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "RMK firmware spike for the MoErgo Glove80 (see docs/rmk-evaluation.md)"

# Standalone workspace: the repo root workspace builds host tools for the
# native target; this crate cross-compiles for thumbv7em-none-eabihf.
[workspace]

[dependencies]
# The sparse lighting compositor (docs/lighting-design.md): pure no_std
# logic, unit-tested on the host in its own workspace.
glove80-compositor = { path = "../glove80-compositor" }
# The host protocol codec (protocol/glove80-host-protocol/PROTOCOL.md),
# shared read-only with the CLI and (via golden vectors) Lightbench.
glove80-host-protocol = { path = "../../protocol/glove80-host-protocol" }
# RMK, vendored as a git subtree at the previously pinned revision
# (1156f82bddecda6d3bcfce60adb7a6504083b9e8) plus minimal Glove80 patches for
# the host-protocol transports; every patch site is marked "GLOVE80 PATCH".
rmk = { path = "../vendor/rmk/rmk", features = [
    "nrf52840_ble",
    "split",
    "async_matrix",
    "adafruit_bl",
] }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "peripheral",
    "central",
    "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "critical-section-impl",
    "nrf52840",
] }
bt-hci = { version = "0.9", features = ["defmt"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-futures = "0.1"
embassy-sync = "0.8"
heapless = "0.8"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.11", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "glove80_lh"
path = "src/central.rs"

[[bin]]
name = "glove80_rh"
path = "src/peripheral.rs"

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = true
opt-level = "z"
overflow-checks = false
lto = "fat"
