[package]
name = "glove80-control"
version = "0.1.0"
edition = "2021"
description = "Control Glove80 keyboards over the RMK host protocol (USB raw HID / BLE)"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# RMK host protocol (Phase 2): shared wire codec + transports.
glove80-host-protocol = { path = "../../protocol/glove80-host-protocol", features = ["std"] }
heapless = { version = "0.8", default-features = false }
# USB transport: direct hidraw ioctls (no libudev/hidapi C dependency).
libc = "0.2"
# BLE transport: BlueZ over D-Bus via pure-Rust zbus (no libdbus C dependency).
zbus = "5"
