[package]
name = "glove80-control"
version = "0.1.0"
edition = "2021"
description = "Control Glove80 keymaps over Rynk and lighting/config over the Glove80 protocol"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# RMK host protocol (Phase 2): shared wire codec + transports.
glove80-host-protocol = { path = "../../crates/glove80-host-protocol", features = ["std"] }
heapless = { version = "0.8", default-features = false }
# USB transport: direct hidraw ioctls (no libudev/hidapi C dependency).
libc = "0.2"
# BLE transport: BlueZ over D-Bus via pure-Rust zbus (no libdbus C dependency).
zbus = "5"
# RMK-native configuration protocol. During migration this owns keymap
# operations while the Glove80 protocol continues to own lighting/config.
rynk = { path = "../../dependencies/rmk/rynk" }
rynk-serial = { path = "../../dependencies/rmk/rynk/rynk-serial" }
rynk-ble = { path = "../../dependencies/rmk/rynk/rynk-ble" }
embassy-futures = "0.1"
tokio = { version = "1.47", features = ["net", "rt-multi-thread"] }
